--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-.image {
-  background-image: url(/images//full-shot-travel-concept-with-landmarks.jpg);
+.banner {
+  background-image: url("/images/woman-walking-kelingking-beach-nusa-penida-island-bali-indonesia.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.package {
+  background-image: url("/images/ammie-ngo-vcu-OZBxxRk-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
